<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- ======================================================================================= -->
    <!-- App  -->
    <!-- ======================================================================================= -->
    <string name="app_name" translatable="false" >Snapmatic</string>
    <string name="app_name_free" translatable="false">Snapmatic</string>
    <string name="app_name_pro" translatable="false">Snapmatic</string>




    <!-- ======================================================================================= -->
    <!-- Alerts  -->
    <!-- ======================================================================================= -->


    <!-- Info  -->
    <string name="alert_welcomeDialog_title">Hi</string>
    <string name="alert_welcomeDialog_Message">
    This app allows you to take pictures remotely using one of the following methods :
    \n\n
    - whistling.
    \n
    - hands clapping.
    </string>


    <!-- Errors  -->
    <string name="alert_error_cameraConnectionFailed">Cannot connect to camera</string>
    <string name="alert_error_micFailed">Unable to activate the microphone</string>
    <string name="alert_error_photoSaveFailed">Failed to save picture</string>
    <string name="alert_error_selectedFolderNotWritable">The selected folder is not writable !</string>

    <!-- Warning  -->



    <!-- ======================================================================================= -->
    <!-- Pro  -->
    <!-- ======================================================================================= -->

    <string name="pro_proFeatureDialog_title">Pro feature</string>
    <string name="pro_proFeatureDialog_cancelBtn">cancel</string>
    <string name="pro_proFeatureDialog_okBtn">Buy</string>
    <string name="pro_proFeatureDialog_clappingMessage">Mode \'hands clapping\' is available only in Pro version</string>





    <!-- ======================================================================================= -->
    <!-- Prefs  -->
    <!-- ======================================================================================= -->

    <string name="pref_windowTitle">Settings</string>

    <!-- General  -->
    <string name="pref_headerTitle_general">General</string>
    <string name="pref_language_title">Language</string>
    <string name="lang_english" translatable="false">English</string>
    <string name="lang_arabic" translatable="false" >العربية</string>
    <string name="lang_french" translatable="false">Français</string>
    <string name="lang_german" translatable="false">Deutch</string>
    <string name="lang_spanish" translatable="false">Espagnol</string>
    <string name="lang_bulgarian" translatable="false">български</string>
    <string name="lang_czech" translatable="false">čeština</string>
    <string name="lang_danish" translatable="false">Dansk</string>
    <string name="lang_finnish" translatable="false">suomalainen</string>
    <string name="lang_hebrew" translatable="false">עברית</string>
    <string name="lang_hindi" translatable="false">हिन्दी</string>
    <string name="lang_croatian" translatable="false">hrvatski</string>
    <string name="lang_hungarian" translatable="false">magyar</string>
    <string name="lang_indonesian" translatable="false">Indonesia</string>
    <string name="lang_italian" translatable="false">italiano</string>
    <string name="lang_japanese" translatable="false">日本人</string>
    <string name="lang_korean" translatable="false">한국의</string>
    <string name="lang_dutch" translatable="false">Nederlands</string>
    <string name="lang_polish" translatable="false">polski</string>
    <string name="lang_portuguese" translatable="false">português</string>
    <string name="lang_romanian" translatable="false">român</string>
    <string name="lang_russian" translatable="false">русский</string>
    <string name="lang_swedish" translatable="false">svenska</string>
    <string name="lang_thai" translatable="false">ไทย</string>
    <string name="lang_filipino" translatable="false">Pilipino</string>
    <string name="lang_turkish" translatable="false">Türk</string>
    <string name="lang_ukrainian" translatable="false">Український</string>
    <string name="lang_vietnamese" translatable="false">tiếng Việt</string>
    <string name="lang_malay" translatable="false">Melayu</string>
    <string name="lang_serbian" translatable="false">српски</string>
    <string name="lang_norwegian" translatable="false">norsk</string>
    <string name="lang_persian" translatable="false">فارسی</string>
    <string name="lang_chinese" translatable="false">中国</string>


    <!-- Main settings  -->
    <string name="pref_headerTitle_mainCameraSettings">Main camera settings</string>
    <string name="pref_catTitle_general">General</string>
    <string name="pref_enableShutterSound_title">Enable shutter sound</string>
    <string name="pref_pictureSize_title">Picture Size</string>
    <string name="pref_focusMode_title">Focus mode</string>
    <string name="pref_focusMode_disabled">Deactivated</string>
    <string name="pref_focusMode_auto">Auto</string>
    <string name="pref_focusMode_continuous">Continuous</string>
    <string name="pref_focusMode_infinity">Infinity</string>
    <string name="pref_focusMode_macro">Macro</string>
    <string name="pref_focusMode_fixed">Fixed</string>
    <string name="pref_sceneMode_title">Scene mode</string>
    <string name="pref_sceneMode__auto">Auto</string>
    <string name="pref_sceneMode__action">Action</string>
    <string name="pref_sceneMode__barcode">Barcode</string>
    <string name="pref_sceneMode__beach">Beach</string>
    <string name="pref_sceneMode__candlelight">Candle light</string>
    <string name="pref_sceneMode__fireworks">Fireworks</string>
    <string name="pref_sceneMode__hdr">HDR</string>
    <string name="pref_sceneMode__landscape">Landscape</string>
    <string name="pref_sceneMode__night">Night</string>
    <string name="pref_sceneMode__party">Party</string>
    <string name="pref_sceneMode__portrait">Portrait</string>
    <string name="pref_sceneMode__snow">Snow</string>
    <string name="pref_sceneMode__sports">Sports</string>
    <string name="pref_sceneMode__steadyphoto">Steady photo</string>
    <string name="pref_sceneMode__sunset">Sunset</string>
    <string name="pref_sceneMode__theatre">Theatre</string>



    <!-- advanced  settings -->
    <string name="pref_headerTitle_advancedCameraSettings">Advanced camera settings</string>
    <string name="pref_previewSize_title">Preview Size</string>
    <string name="pref_iso_title" translatable ="false">ISO</string>
    <string name="pref_enableScreenFlash_title">Use screen as a flash\'s light</string>
    <string name="pref_enableScreenFlash_Description">If the front camera doesn\'t have a flash light, the screen will turn white</string>
    <string name="pref_enableTouchToFocus_title">Enable "touch to focus"</string>
    <string name="pref_enableLocationRecording_title">Save location</string>
    <string name="pref_enableCustomStorage_title">Custom storage</string>



    <!-- remote  -->
    <string name="pref_headerTitle_remoteControl">Remote control</string>
    <string name="pref_catTitle_remoteControl">Remote control</string>
    <string name="pref_remoteMode_title">Control mode</string>
    <string name="pref_remoteMode_disabled">Deactivated</string>
    <string name="pref_remoteMode_whistle">Whistle</string>
    <string name="pref_remoteMode_clapping">Hands clapping</string>
    <string name="pref_remoteModeDelay_title">Delay before taking photo</string>
    <string name="pref_remoteModeDelay_formattedValue">%1$d seconds</string>
    <string name="pref_whistleSensitivity_title">The sensitivity of whistling</string>
    <string name="pref_catTitle_whistlingControl">Whistle</string>
    <string name="pref_clappingSensitivity_title">The sensitivity of clapping</string>



    <!-- Activators  -->
    <string name="pref_headerTitle_activators">Activators</string>
    <string name="pref_catTitle_activators">Activators</string>
    <string name="pref_volumeButtonsActivator_title">Volume buttons</string>
    <string name="pref_activator__disabled">Deactivated</string>
    <string name="pref_activator__shutter">Shutter</string>
    <string name="pref_activator__zoom">Zoom</string>
    <string name="pref_catTitle_advancedCamSettings">Advanced camera settings</string>


    <!-- UI  -->
    <string name="pref_headerTitle_ui">User interface</string>
    <string name="pref_showZoomUi_title">Show the zoom control</string>
    <string name="pref_showZoomUi_summary">You can adjust the zoom using vertical swipes</string>
    <string name="pref_enableFullscreen_title">Fullscreen</string>
    <string name="pref_keepMenuOpen_title">Keep menu open</string>














    <!-- ======================================================================================= -->
    <!-- Gallery  -->
    <!-- ======================================================================================= -->

    <string name="gallery_alert_empty">The gallery is empty</string>





    <!-- ======================================================================================= -->
    <!-- About  -->
    <!-- ======================================================================================= -->
    <string name="about_pageTitle">About us</string>
    <string name="about_legalNotices_btn">Legal notices</string>
    <string name="about_legalNotices_windowTitle">Legal notices</string>
    <string name="about_developedBy">Developed by José Herrera</string>
    <string name="about_sendUsEmail_btn">Send us an email</string>
    <string name="about_upgrade_btn">Upgrade to Pro version</string>
    <string name="about_contributions_btn">Contributions</string>
    <string name="about_contributions_windowTitle">Contributions</string>
    <string name="about_otherApps_btn">Apps</string>


    <!-- ======================================================================================= -->
    <!-- Share  -->
    <!-- ======================================================================================= -->
    <string name="share_rateUs_btn">Rate the app</string>







    <!-- ======================================================================================= -->
    <!-- Dev apps  -->
    <!-- ======================================================================================= -->

    <string name="devApps_tiltScroll_title" translatable="false">Tilt Scroll</string>
    <string name="devApps_tiltScroll_description" >
        This app allows you to scroll your screen just by tilting your device, and works with all other applications
    </string>

    <string name="devApps_rapidos_title" translatable="false">Rapidos</string>
    <string name="devApps_rapidos_description" >
        Rapidos lets you quickly start applications, make phone calls, or launch any other task by simply tracing gestures with a finger on the screen.
    </string>






</resources>
